move data and plots, edit readme

--- a/WR_FFPG_NN.ipynb
+++ b/WR_FFPG_NN.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "da041bc2",
    "metadata": {},
    "outputs": [],
@@ -60,8 +60,8 @@
     "device = torch.device(\"cpu\")  # Simple and efficient for this use case\n",
     "\n",
     "# Set dataset filenames\n",
-    "train_filename = \"wr_data_18-22.csv\"\n",
-    "valid_filename = \"wr_data_23.csv\"\n",
+    "train_filename = \"data/wr_data_18-22.csv\"\n",
+    "valid_filename = \"data/wr_data_23.csv\"\n",
     "\n",
     "# Define model filename\n",
     "model_filename = \"ffpg_model.pt\"\n",
