--- a/WR_FFPG_NN.ipynb
+++ b/WR_FFPG_NN.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c845e7ab",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "da041bc2",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
     "valid_filename = \"data/wr_data_23.csv\"\n",
     "\n",
     "# Define model filename\n",
-    "model_filename = \"ffpg_model.pt\"\n",
+    "model_filename = \"models/ffpg_model.pt\"\n",
     "\n",
     "# Initialize I/O metrics\n",
     "input_metrics = ['targets_per_route_run', 'yards_per_route_run',\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "d396b346",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "a2f537fe",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "78708d95",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "86acb31b",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing model from ffpg_model.pt\n",
+      "Loading existing model from models/ffpg_model.pt\n",
       "✅ Model loaded successfully!\n"
      ]
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "7cd9ae3d",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "066df622",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fbc5556c",
    "metadata": {},
    "outputs": [
@@ -4802,7 +4802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "35de58f8",
    "metadata": {},
    "outputs": [
@@ -4869,7 +4869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "3113d7c9-8979-4369-a946-534469811249",
    "metadata": {},
    "outputs": [
